@@ -1430,6 +1430,7 @@ systemSettings.permissions.datasourceManagement=Data Source Management Permissio
 systemSettings.permissions.superadmin=Superadmin group
 systemSettings.permissions.userEditSelf=Edit your own user settings
 systemSettings.permissions.sendToMailingList=Send email to mailing list
+systemSettings.permissions.changeUsername=Change your own username
 systemSettings.systemAlarmLevelsSaved=System event alarm levels have been saved
 systemSettings.auditAlarmLevelsSaved=Audit event alarm levels have been saved
 systemSettings.httpSaved=Http settings have been saved
@@ -1690,6 +1691,7 @@ users.validate.badDelete=You cannot delete your own account
 users.validate.cannotChangePermissions=Only admin users can modify permissions
 users.validate.cannotLockOwnPassword=You cannot lock your own password
 users.validate.cannotUseSamePasswordTwice=You cannot use the same password twice in a row
+users.validate.cannotChangeOwnUsername=You cannot change your username without the proper permission
 users.receiveAlarmEmails=Send alarm emails
 users.receiveOwnAuditEvents=Receive own audit events
 users.deleteConfirm=Are you sure you wish to delete this user?
