@@ -1,0 +1,37 @@
+/**
+ * Copyright (C) 2020  Infinite Automation Software. All rights reserved.
+ */
+
+package com.serotonin.m2m2.module.definitions.permissions;
+
+import java.util.Collections;
+import java.util.Set;
+
+import com.serotonin.m2m2.i18n.TranslatableMessage;
+import com.serotonin.m2m2.module.PermissionDefinition;
+import com.serotonin.m2m2.vo.permission.PermissionHolder;
+import com.serotonin.m2m2.vo.role.Role;
+
+/**
+ * Permission to allow changing ones own username
+ * @author Terry Packer
+ */
+public class ChangeOwnUsernamePermissionDefinition extends PermissionDefinition{
+    public static final String PERMISSION = "permissions.user.changeUsername";
+
+    @Override
+    public TranslatableMessage getDescription() {
+        return new TranslatableMessage("systemSettings.permissions.changeUsername");
+    }
+
+    @Override
+    public String getPermissionTypeName() {
+        return PERMISSION;
+    }
+
+    @Override
+    public Set<Role> getDefaultRoles() {
+        return Collections.singleton(PermissionHolder.USER_ROLE);
+    }
+
+}
