@@ -16,6 +16,7 @@
 * Upgrade Jackson library to 2.10.2
 * Upgrade Apache POI to 4.1.2 which is used in Excel Report generatio
 * Upgrade MySQL connector to 8.0.19 driver classname is now com.mysql.cj.jdbc.Driver
+* Add permission to allow users to change thier own username defaults to allow all users to do this
 
 *Version 3.7.4*
 * Improve work item failure logging
